     generic jitterbuffer on incoming calls going to Asterisk applications.
     For example, this would allow you to use a jitterbuffer for an incoming
     SIP call to Voicemail by putting a Local channel in the middle.  This
     feature is enabled by using the 'j' option in the Dial string to the Local
     channel in conjunction with the existing 'n' option for local channels.

Zaptel channel driver (chan_zap) Changes
----------------------------------------
  * SS7 support in chan_zap (via libss7 library)
  * In India, some carriers transmit CID via dtmf. Some code has been added
     that will handle some situations. The cidstart=polarity_IN choice has been added for
     those carriers that transmit CID via dtmf after a polarity change.
  * CID matching information is now shown when doing 'dialplan show'.
  * Added zap show version CLI command to chan_zap.
  * Added setvar support to zapata.conf channel entries.
  * Added two new options: mwimonitor and mwimonitornotify.  These options allow
     you to enable MWI monitoring on FXO lines.  When the MWI state changes,
     the script specified in the mwimonitornotify option is executed.  An internal
     event indicating the new state of the mailbox is also generated, so that
     the normal MWI facilities in Asterisk work as usual.
  * Added signalling type 'auto', which attempts to use the same signalling type
     for a channel as configured in Zaptel. This is primarily designed for analog
     ports, but will also work for digital ports that are configured for FXS or FXO
     signalling types. This mode is also the default now, so if your zapata.conf
     does not specify signalling for a channel (which is unlikely as the sample
     configuration file has always recommended specifying it for every channel) then
     the 'auto' mode will be used for that channel if possible.
  * Added a 'zap set dnd' command to allow CLI control of the Do-Not-Disturb